View serial consoles as tabs in the details window. Allow viewing not just the primary console.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -210,11 +210,11 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="details-menu-view-serial">
+		    <widget class="GtkMenuItem" id="details-menu-view-serial-list">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Serial Console...</property>
+		      <property name="label" translatable="yes">Serial Consoles</property>
 		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_details_menu_view_serial_activate" last_modification_time="Thu, 24 Jul 2008 19:14:47 GMT"/>
+		      <signal name="activate" handler="on_details_menu_view_serial_list_activate" last_modification_time="Mon, 29 Sep 2008 16:57:27 GMT"/>
 		    </widget>
 		  </child>
 
