--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -260,19 +260,19 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkCheckMenuItem" id="menu_view_disk_usage">
+		    <widget class="GtkCheckMenuItem" id="menu_view_disk_io">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Disk usage</property>
+		      <property name="label" translatable="yes">Disk I/O</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">True</property>
-		      <signal name="activate" handler="on_menu_view_disk_usage_activate" last_modification_time="Tue, 28 Mar 2006 16:35:00 GMT"/>
+		      <signal name="activate" handler="on_menu_view_disk_io_activate" last_modification_time="Tue, 28 Mar 2006 16:35:00 GMT"/>
 		    </widget>
 		  </child>
 
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="menu_view_network_traffic">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Network traffic</property>
+		      <property name="label" translatable="yes">Network I/O</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">True</property>
 		      <signal name="activate" handler="on_menu_view_network_traffic_activate" last_modification_time="Tue, 28 Mar 2006 16:35:00 GMT"/>
