color graph and graph lables
so rx/tx, read/write are distinguishable

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1418,9 +1418,9 @@
 				  <child>
 				    <widget class="GtkLabel" id="overview-disk-usage-text">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">20 KBytes/s</property>
+				      <property name="label" translatable="yes">0 KBytes/s\n0KBytes/s</property>
 				      <property name="use_underline">False</property>
-				      <property name="use_markup">False</property>
+				      <property name="use_markup">True</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
 				      <property name="selectable">False</property>
@@ -1446,9 +1446,9 @@
 				  <child>
 				    <widget class="GtkLabel" id="overview-network-traffic-text">
 				      <property name="visible">True</property>
-				      <property name="label">80 MB of 1 GB</property>
+				      <property name="label">0 KBytes/s\n0KBytes/s</property>
 				      <property name="use_underline">False</property>
-				      <property name="use_markup">False</property>
+				      <property name="use_markup">True</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
 				      <property name="selectable">False</property>
