VM Migration support (Shigeki Sakamoto)

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -167,6 +167,27 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="details-menu-migrate">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">_Migrate</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_details_menu_migrate_activate"/>
+
+		      <child>
+			<widget class="GtkMenu" id="details-menu-migrate_menu">
+
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator12">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkMenuItem" id="details-menu-vm-screenshot">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Take Screenshot</property>
