--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -1,15 +1,17 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
-
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<!--*- mode: xml -*-->
 <glade-interface>
-
-<widget class="GtkAboutDialog" id="vmm-about">
-  <property name="visible">True</property>
-  <property name="destroy_with_parent">True</property>
-  <property name="program-name" translatable="yes">Virtual Machine Manager</property>
-  <property name="copyright" translatable="yes">Copyright (C) 2006 Red Hat Inc.</property>
-  <property name="comments" translatable="yes">Powered by libvirt</property>
-  <property name="license">    This program is free software; you can redistribute it and/or modify
+  <widget class="GtkAboutDialog" id="vmm-about">
+    <property name="visible">True</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="program_name">Virtual Machine Manager</property>
+    <property name="copyright" translatable="yes">Copyright (C) 2006 Red Hat Inc.</property>
+    <property name="comments" translatable="yes">Powered by libvirt</property>
+    <property name="website">http://virt-manager.et.redhat.com/</property>
+    <property name="website_label">http://virt-manager.et.redhat.com/</property>
+    <property name="license">    This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
     (at your option) any later version.
@@ -23,18 +25,26 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 </property>
-  <property name="wrap_license">False</property>
-  <property name="website">http://virt-manager.et.redhat.com/</property>
-  <property name="website_label">http://virt-manager.et.redhat.com/</property>
-  <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
+    <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
 Hugh O. Brock &lt;hbrock@redhat.com&gt;
 Máirín Duffy &lt;duffy@redhat.com&gt;
 Jeremy Katz &lt;katzj@redhat.com&gt;
 </property>
-  <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;	</property>
-  <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
-  <signal name="delete_event" handler="on_vmm_about_delete_event" last_modification_time="Wed, 29 Mar 2006 10:31:19 GMT"/>
-  <signal name="response" handler="on_vmm_about_response" last_modification_time="Mon, 11 Sep 2006 16:26:44 GMT"/>
-</widget>
-
+    <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
+    <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;	</property>
+    <signal name="delete_event" handler="on_vmm_about_delete_event"/>
+    <signal name="response" handler="on_vmm_about_response"/>
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="dialog-vbox1">
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="dialog-action_area1">
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">GTK_PACK_END</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
 </glade-interface>
