--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -486,7 +486,7 @@
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">21</property>
-                                <property name="label" translatable="yes">Lightweight method of virtualizing machines. Limits operating system choices because the OS must be specially modified to support paravirtualization. Better performance than fully virtualized systems.</property>
+                                <property name="label" translatable="yes">Lightweight method of virtualizing machines. Limits operating system choices because the OS must be specially modified to support paravirtualization, but yeilds better performance than fully virtualized systems.</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
                               </widget>
@@ -530,7 +530,7 @@
                                       <widget class="GtkLabel" id="label297">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">Involves hardware simulation, allowing for a greater range of operating systems (does not require OS modification). Slower than paravirtualized systems.</property>
+                                        <property name="label" translatable="yes">Involves hardware simulation, allowing for a greater range of virtual devices and operating systems (does not require OS modification).</property>
                                         <property name="use_markup">True</property>
                                         <property name="wrap">True</property>
                                       </widget>
