--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -486,7 +486,7 @@
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">21</property>
-                                <property name="label" translatable="yes">Lightweight method of virtualizing machines. Limits operating system choices because the OS must be specially modified to support paravirtualization, but yeilds better performance than fully virtualized systems.</property>
+                                <property name="label" translatable="yes">Lightweight method of virtualizing machines. Limits operating system choices because the OS must be specially modified to support paravirtualization, but yields better performance than fully virtualized systems.</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
                               </widget>
