--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -730,7 +730,7 @@
                         <property name="xalign">0</property>
                         <property name="xpad">20</property>
                         <property name="ypad">10</property>
-                        <property name="label" translatable="yes">Please choose the range of addresses the DHCP server can use to allocate to guests attached to the virtual network</property>
+                        <property name="label" translatable="yes">Please choose the range of addresses the DHCP server will allocate to virtual machines attached to the virtual network.</property>
                         <property name="use_markup">True</property>
                         <property name="wrap">True</property>
                       </widget>
