--- a/src/vmm-create-pool.glade
+++ b/src/vmm-create-pool.glade
@@ -68,7 +68,7 @@
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="yalign">0</property>
-                            <property name="label" translatable="yes">Specify a storage location to be later split into VM storage.</property>
+                            <property name="label" translatable="yes">Specify a storage location to be later split into virtual machine storage.</property>
                           </widget>
                           <packing>
                             <property name="position">1</property>
@@ -247,7 +247,7 @@
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="yalign">0</property>
-                            <property name="label" translatable="yes">Specify a storage location to be later split into VM storage.</property>
+                            <property name="label" translatable="yes">Specify a storage location to be later split into virtual machine storage.</property>
                           </widget>
                           <packing>
                             <property name="position">1</property>
