--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -58,7 +58,7 @@
                   <widget class="GtkLabel" id="label3">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Create a storage unit that can be used directly by a VM.</property>
+                    <property name="label" translatable="yes">Create a storage unit that can be used directly by a virtual machine.</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
