Rename host 'Storage Pools' tab to just 'Storage'

--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1458,7 +1458,7 @@
             <child>
               <widget class="GtkLabel" id="label13">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Storage Pools</property>
+                <property name="label" translatable="yes">Storage</property>
               </widget>
               <packing>
                 <property name="type">tab</property>
