Update 'New VM' wizard to clarify that a shared device == bridge. (James Ralston)

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -2361,7 +2361,7 @@
                                       <widget class="GtkLabel" id="label372">
                                         <property name="visible">True</property>
                                         <property name="xpad">7</property>
-                                        <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; Choose this option if your host is statically connected to wired ethernet, to gain the ability to migrate the virtual machine.&lt;/small&gt;</property>
+                                        <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; Choose this option if your host is statically connected to wired ethernet, to gain the ability to migrate the virtual system. (To share a physical device, configure it as a bridge.)&lt;/small&gt;</property>
                                         <property name="use_markup">True</property>
                                         <property name="wrap">True</property>
                                       </widget>
