More UI tweaks (Richard Laager)

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -2684,7 +2684,7 @@
                             <child>
                               <widget class="GtkLabel" id="label280">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; For best performance, the number of virtual CPUs should be less than (or equal to) the number of logical CPUs on the host system.&lt;/small&gt;</property>
+                                <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; For best performance, the number of virtual CPUs should be less than (or equal to) the number of physical CPUs on the host system.&lt;/small&gt;</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
                               </widget>
