--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -84,7 +84,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-shutdown">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">S_hutdown</property>
+                        <property name="label" translatable="yes">S_hut Down</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_shutdown_activate"/>
                         <child>
@@ -100,7 +100,7 @@
                             <child>
                               <widget class="GtkMenuItem" id="details-menu-poweroff">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Poweroff</property>
+                                <property name="label" translatable="yes">Shut Down</property>
                                 <property name="use_underline">True</property>
                                 <signal name="activate" handler="on_details_menu_poweroff_activate"/>
                               </widget>
@@ -108,7 +108,7 @@
                             <child>
                               <widget class="GtkMenuItem" id="details-menu-destroy">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Force poweroff</property>
+                                <property name="label" translatable="yes">Force Off</property>
                                 <property name="use_underline">True</property>
                                 <signal name="activate" handler="on_details_menu_destroy_activate"/>
                               </widget>
@@ -178,7 +178,7 @@
                     <child>
                       <widget class="GtkCheckMenuItem" id="details-menu-view-scale-display">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Scale display</property>
+                        <property name="label" translatable="yes">Scale Display</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_view_scale_display_activate"/>
                       </widget>
@@ -212,7 +212,7 @@
             <child>
               <widget class="GtkMenuItem" id="details-menu-send-key">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Send key</property>
+                <property name="label" translatable="yes">Send Key</property>
                 <property name="use_underline">True</property>
                 <signal name="activate" handler="on_details-menu-send-key_activate"/>
                 <child>
@@ -419,7 +419,7 @@
               <widget class="GtkMenuToolButton" id="control-shutdown">
                 <property name="visible">True</property>
                 <property name="is_important">True</property>
-                <property name="label" translatable="yes">Shutdown</property>
+                <property name="label" translatable="yes">Shut Down</property>
                 <property name="use_underline">True</property>
                 <signal name="clicked" handler="on_control_shutdown_clicked"/>
               </widget>
